cmake_minimum_required(VERSION 2.8)
project(HELLO)
enable_language(Fortran)
add_subdirectory("src" "bin")
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_INSTALL_PREFIX "/Users/qzmfrank/Codes/cmaketest/Fortran/installtest/")
install(DIRECTORY "doc/" DESTINATION ".")
install(PROGRAMS "build/bin/main" DESTINATION "bin")
